--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
  "dependencies": {
   "body-parser": "^1.17.2",
   "compression": "^1.7.0",
-  "ejs": "~1.0.0",
+  "ejs": "~>1.0.0",
   "express": "~4.15.4",
   "express-session": "^1.15.5",
   "method-override": "^2.3.9",
