--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "compression": "^1.7.0",
   "connect-flash": "~0.1.1",
   "connect-mongo": "~1.3.2",
-  "ejs": "~>1.0.0",
+  "ejs": "^2.5.5",
   "express": "^4.16.3",
   "express-session": "^1.15.5",
   "method-override": "^2.3.9",
